--- a/res_MuSu/3_[NA, c, MFA_subs]/MuSu_(NA, c, MFA_subs)_shiny.rmd
+++ b/res_MuSu/3_[NA, c, MFA_subs]/MuSu_(NA, c, MFA_subs)_shiny.rmd
@@ -30,7 +30,7 @@ suppressMessages(library(shinyWidgets))
 # read data
 
 ```{r data}
-load("../../../Tryout4No3.RData")
+load("../../Tryout4No3.RData")
 ```
 
 # Contribution plot
